log
Mon May  4 02:17:22 AM UTC 2026: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:47:14: error: ‘return’ with no value, in function returning non-void [-Wreturn-mismatch]
   47 |     if(!map) return;
      |              ^~~~~~
treemap.c:45:11: note: declared here
   45 | TreeMap * createTreeMap(int (*lower_than) (void* key1, void* key2)) {
      |           ^~~~~~~~~~~~~
4531128
Mon May  4 02:17:37 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/60
395c7dc
Mon May  4 02:18:10 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
4a96441
Mon May  4 02:22:48 AM UTC 2026: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:59:20: error: initialization of ‘TreeMap *’ from incompatible pointer type ‘TreeNode *’ [-Wincompatible-pointer-types]
   59 |     TreeMap* aux = tree->root;
      |                    ^~~~
treemap.c:61:35: error: ‘TreeMap’ has no member named ‘pair’
   61 |         if(is_equal(tree, key, aux->pair->key)){
      |                                   ^~
treemap.c:62:27: error: assignment to ‘TreeNode *’ from incompatible pointer type ‘TreeMap *’ [-Wincompatible-pointer-types]
   62 |             tree->current = aux;
      |                           ^
treemap.c:63:23: error: ‘TreeMap’ has no member named ‘pair’
   63 |             return aux->pair;
      |                       ^~
treemap.c:65:37: error: ‘TreeMap’ has no member named ‘pair’
   65 |         if(tree->lower_than(key, aux->pair->key)) aux = aux->left;
      |                                     ^~
treemap.c:65:60: error: ‘TreeMap’ has no member named ‘left’
   65 |         if(tree->lower_than(key, aux->pair->key)) aux = aux->left;
      |                                                            ^~
treemap.c:66:23: error: ‘TreeMap’ has no member named ‘right’
   66 |         else aux = aux->right;
      |                       ^~
26ba782
Mon May  4 02:24:10 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
1c44649
Mon May  4 02:36:17 AM UTC 2026: 
 treemap.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/60
b32eb71
Mon May  4 02:37:21 AM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/60
e15819b
Mon May  4 02:56:16 AM UTC 2026: 
 treemap.c | 31 ++++++++++++++++++++++++++++++-
 1 file changed, 30 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:129:16: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
  129 |             if(node->parent->left = node) node->parent->left = hijo;
      |                ^~~~
cc1: all warnings being treated as errors
6861889
Mon May  4 02:56:32 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 35/60
7440dc1
Mon May  4 03:05:55 AM UTC 2026: 
 treemap.c | 20 +++++++++++++++++++-
 1 file changed, 19 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 50/60
11f34b8
Mon May  4 03:10:22 AM UTC 2026: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:201:17: error: statement with no effect [-Werror=unused-value]
  201 |         else aux->right;
      |              ~~~^~~~~~~
cc1: all warnings being treated as errors
060979d
Mon May  4 03:10:41 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  29|0
total_score: 60/60
8671ebe
